--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 :root{
     --primary-color:#425b84;
-    --secondary-color:#5b7bb4;
+    --secondary-color:#0041b3d7;
     --max-width: 1100px;
 }
 
@@ -34,4 +34,78 @@ body{
 
 h1{
     font-size: 2.3rem;
+}
+
+
+#timeline ul {
+    background: var(--primary-color);
+    padding: 50px 0 ;
+}
+
+/* create line */
+#timeline ul li{
+    list-style: none;
+    position: relative;
+    width: 5px;
+    margin: 0 auto;
+    padding-top: 50px;
+    background: #fff;
+}
+
+/* boxes */
+
+#timeline ul li div{
+    position: relative;
+    bottom: 0;
+    width: 400px;
+    padding:1rem;
+    background:var(--secondary-color);
+    transition: all 0.5s ease-in-out;
+
+}
+
+/* Right Side */
+
+#timeline ul li:nth-child(odd) div{
+    left:40px;
+}
+/* Left side */
+#timeline ul li:nth-child(even) div{
+left:-434px;
+}
+#timeline ul li:after{
+    content: '';
+    position: absolute;
+    left:50%;
+    bottom:0;
+    width: 25px;
+    height: 25px;
+    background-color: var(--secondary-color);
+    transform: translateX(-50%);
+    border-radius: 50%;
+    transition: background 0.5s ease-in-out;
+}
+
+/* Arrows  */
+
+#timeline div:before{
+    content:'';
+    position: absolute;
+    bottom:5px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+}
+#timeline ul li:nth-child(odd) div:before{
+    left:-15px;
+    border-width:  8px 16px 8px 0;
+    border-color: transparent var(--secondary-color);
+}
+
+
+/* left Side Arrows */
+#timeline ul li:nth-child(even) div:before{
+    right:-15px;
+    border-width:8px 0 8px 16px;
+    border-color: transparent transparent transparent var(--secondary-color);
 }
